--- a/home/page.html
+++ b/home/page.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="../webjars/bootstrap.min.css" rel="stylesheet">
     <link href="../style.css" rel="stylesheet">
     <script>window.$ = window.jQuery = require('../webjars/jquery.min.js');</script>
@@ -14,21 +16,38 @@
     <img class="navbar-brand" src="../images/waseel_logo.png" id="logo_custom" width="50px" height="50px" alt="logo">
 
     <!-- Links -->
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="../dbconfiguration/dbconfigui.html">Configuration</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../extraction/extractionui.html">Extract</a>
-        </li>
-    </ul>
-    <div class="navbar-nav ml-auto" onclick="logout()">
-        <button class="btn btn-primary btn-block btn-logout" onclick="logout();return false;">Logout</button>
+    <div class="container">
+         <ul class="navbar-nav">
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="../dbconfiguration/dbconfigui.html">Configuration</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="../extraction/extractionui.html">Extract</a>
+            </li>
+        </ul>
     </div>
+    
+    <div class="user-action">
+        <div class="user-info">
+            <h3 id="providerName"></h3>
+            <span id="providerId"></span>
+        </div>
+        <div class="navbar-nav ml-auto" onclick="logout()">
+            <button class="btn btn-primary btn-block btn-logout" onclick="logout();return false;">
+                <img src="../images/logout_icon.svg" alt="log out" class="normal-img">
+                <img src="../images/logout_icon-h.svg" alt="log out" class="hover-img">
+            </button>
+        </div>
+    </div>
+    
 
 </nav>
 
 <script>
+    $(function () {
+        document.getElementById("providerName").innerHTML = localStorage.getItem("provider_name");
+        document.getElementById("providerId").innerHTML = localStorage.getItem("provider_id");
+    })
     function logout(){
     localStorage.removeItem('access_token');
     localStorage.removeItem('provider_id');
