--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -41,17 +41,17 @@
                                 <input type="text" id="startDate" class="form-control select-bg select-date" name="startDate" placeholder="startDate" required
                                     oninvalid="this.setCustomValidity('Please provide a start date')" oninput="setCustomValidity('')"
                                     value="Start Date" onfocus="(this.type='date')">
-                                <i class="cal_icon">
+                                <!-- <i class="cal_icon">
                                     <img src="../images/calendar_icon.svg" alt="Calendar Icon" />
-                                </i>
+                                </i> -->
                             </div>
                             <div class="col-sm-5">
                                 <input type="text" id="endDate" class="form-control select-bg select-date" name="endDate" placeholder="endDate" required
                                     oninvalid="this.setCustomValidity('Please provide an end date')" oninput="setCustomValidity('')"
                                     value="End Date" onfocus="(this.type='date')">
-                                <i class="cal_icon">
+                                <!-- <i class="cal_icon">
                                     <img src="../images/calendar_icon.svg" alt="Calendar Icon" />
-                                </i>
+                                </i> -->
                             </div>
                             <div class="col extract-btn">
                                 <button type="submit" class="btn btn-primary btn-signin">Extract Claims</button>
