--- a/home/page.html
+++ b/home/page.html
@@ -18,9 +18,9 @@
     <!-- Links -->
     <div class="container">
          <ul class="navbar-nav">
-            <!-- <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="../dbconfiguration/dbconfigui.html">Configuration</a>
-            </li> -->
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="../extraction/extractionui.html">Extract</a>
             </li>
