Extract data as ALL claim type

--- a/dbconfiguration/dbconfigui.html
+++ b/dbconfiguration/dbconfigui.html
@@ -21,7 +21,7 @@
                 <hr>
                 <div class="inner-container">
                     <div>
-                        <form onsubmit="databaseConfiguration();return false;">
+                        <form>
                             <div class="errorArea" style="display: none;" id="error-block">
                                 <ul id="db-errors"></ul>
                             </div>
