--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -31,6 +31,7 @@
                                 <select id="selectedClaim" class="form-control select-bg" required oninvalid="this.setCustomValidity('Please select a claim type')"
                                     oninput="setCustomValidity('')">
                                     <option name="Claim Type" value="">Claim Type</option>
+                                    <option value="ALL">ALL</option>
                                     <option value="INPATIENT">INPATIENT</option>
                                     <option value="OUTPATIENT">OUTPATIENT</option>
                                 </select>
