replace logo and autoupdate style

--- a/extraction/extractionui.html
+++ b/extraction/extractionui.html
@@ -14,7 +14,15 @@
     <div class="container">
         <div class="card extract_page">
             <div class="inner-container">
-                <h5>Extract Claims</h5>
+                <div class="row" style="padding: 12px 0 0; align-items: center;">
+                    <h5 class="col-sm-6">Extract Claims</h5>
+                    <div class="col-sm-6 text-right">
+                        <button type="submit" class="btn btn-primary btn-signin" onclick="refresh()">
+                            <img src="../images/refreshing.svg" width="20px" alt="Refresh" class="normal-img">
+                            <img src="../images/refreshing-h.svg" width="20px" alt="Refresh" class="hover-img">
+                        </button>
+                    </div>
+                </div>
             </div>
             <hr>
             <div class="inner-container">
